--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.4.1",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
