--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "npx react-email dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -27,6 +28,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
@@ -37,12 +39,15 @@
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "recharts": "^3.1.0",
+    "resend": "^4.7.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/components": "^0.3.2",
+    "@react-email/preview-server": "^4.2.4",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
@@ -51,6 +56,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "prisma": "^6.12.0",
+    "react-email": "^4.2.4",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
