--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "email": "npx react-email dev"
+    "email": "npx react-email dev",
+    "test:email": "npx tsx src/lib/test-nodemailer.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -24,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.0",
     "@types/gsap": "^1.20.2",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -35,11 +37,11 @@
     "next": "15.4.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "recharts": "^3.1.0",
-    "resend": "^4.7.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
