--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "15.4.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
+    "node-tesseract-ocr": "^2.2.1",
     "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
@@ -44,6 +45,7 @@
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
